<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_fragment_auth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/fragment_auth_title"
            android:textColor="@color/textMinusOne"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/cl_fragment_auth_avatar_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fragment_auth_avatar_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fragment_auth_title">

            <ImageView
                android:id="@+id/iv_fragment_auth_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/fragment_auth_avatar_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@raw/meditating" />

            <ImageView
                android:id="@+id/iv_fragment_auth_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/fragment_auth_edit_description"
                android:elevation="10dp"
                android:src="@raw/edit"
                app:layout_constraintBottom_toBottomOf="@+id/iv_fragment_auth_avatar"
                app:layout_constraintEnd_toEndOf="@+id/iv_fragment_auth_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_fragment_auth_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:autofillHints="name"
            android:background="@drawable/background_et_fragment_auth_name"
            android:fontFamily="@font/sourcesanspro_bold"
            android:gravity="center_vertical"
            android:hint="@string/et_fragment_auth_name_hint"
            android:inputType="text"
            android:paddingHorizontal="24dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_fragment_auth_avatar_container" />

        <Button
            android:id="@+id/btn_fragment_auth_send"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_btn_fragment_auth_send"
            android:fontFamily="@font/sourcesanspro_bold"
            android:text="@string/fragment_auth_send_text"
            android:textColor="@color/textMinusOne"
            android:textSize="14sp"
            app:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_fragment_auth_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>