<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.UserListFragment">

    <EditText
        android:id="@+id/et_fragment_user_list_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:background="@drawable/background_et_fragment_auth_name"
        android:fontFamily="@font/sourcesanspro_bold"
        android:gravity="center_vertical"
        android:hint="@string/sv_fragment_user_list_search_hint"
        android:inputType="text"
        android:paddingHorizontal="24dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fragment_user_list_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fragment_user_list_search"
        tools:listitem="@layout/adapter_fragment_user_list_users" />

    <LinearLayout
        android:id="@+id/ll_fragment_user_list_empty_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fragment_user_list_search"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_fragment_user_list_empty_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/tv_fragment_user_list_empty_title_text"
            android:textAlignment="center"
            android:textColor="@color/textMinusOne"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_fragment_user_list_empty_icon"
            android:layout_width="240dp"
            android:layout_height="220dp"
            android:contentDescription="@string/iv_fragment_user_list_empty_icon"
            android:src="@raw/sad_girl" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>